# Web-UI-Controlled-Robot

./: .gitignore  README.md
vs/: .gitignore
vs/src/my_robot_controller/: CMakeLists.txt  package.xml
vs/src/my_robot_controller/Rviz/: my_robot_vs.rviz
vs/src/my_robot_controller/config/: map_config.yaml  safety_params.yaml  safety_params.yaml.backup.20260207_053325
vs/src/my_robot_controller/launch/: indoor.launch.py
vs/src/my_robot_controller/src/: a_star_planner.cpp  costmap_2d_from_3d.cpp  costmap_2d_from_3d.cpp.backup.20260207_064451  dynamic_3d_map_manager.cpp  lidar_listener.cpp  local_planner(backup).cpp  local_planner.cpp  local_planner.cpp.backup.20260207_064451  map_accumulator_3d.cpp  map_loader_node.cpp  obstacle_detector_3d.cpp  safety_monitor.cpp  safety_monitor.cpp.backup.20260207_053325
vs/src/my_robot_description/: package.xml
vs/src/my_robot_description/urdf/: robot.urdf
vs/src/my_robot_teleop/: package.xml
vs/src/my_robot_teleop/src/: teleop_node.cpp
vs/src/my_robot_vision/: package.xml
vs/src/my_robot_vision/src/: camera_safety.cpp
web_ui/: index.html
